--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next-google-fonts": "^2.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.32.8"
+    "react-slick": "^0.28.1",
+    "sass": "^1.32.8",
+    "slick-carousel": "^1.8.1"
   }
 }
